--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://kit.fontawesome.com/44ff6c67ff.css" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/44ff6c67ff.js" crossorigin="anonymous"></script>
     <title>BHROMAON</title>
 </head>
 <body>
@@ -18,11 +18,11 @@
             <h1 class="header__title">BHROMAON</h1>
             <h5 class="header__slogan">Safe Travel Anywhere</h5>
         </div>
-        <div class="header__searchbar">
+        <div class="header__search">
             <input type="text" class="header__searchbar" placeholder="Search Your Travel Destination">
-            <button class="btn">SEARCH <i class="fa-thin fa-magnifying-glass"></i></button>
+            <button class="btn btn--search">SEARCH <i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
-        <a href="ADD">Scroll Down
+        <a href="#why-us">Scroll Down
             <br>
             <i class="fa-light fa-chevron-down"></i>
         </a>
@@ -36,13 +36,13 @@
             <li class="nav__link"><a href="#" class="nav__link">CONTACT US</a></li>
         </ul>
     </nav>
-    <section class="why-us">
+    <section class="why-us" id="why-us">
         <div class="why-us__main">
             <h2 class="why-us__title">Why Choose Us</h2>
             <p class="why-us__info main__info">Tion and dislike men who are so beguiled and demoralized by desire by the charms 
                 of pleasure of the moment, so blinded by desire, that they cannot foresee </p>
             <p class="why-us__info main__info">Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that</p>
-            <button class="btn">EXPLORE PLACES</button>
+            <button class="btn btn--explore">EXPLORE PLACES</button>
         </div>
         <div class="why-us__img">
             <img src="images/cottage.png" alt="cottage by the lake">
@@ -51,11 +51,11 @@
     </section>
     <section class="mid">
         <div class="mid__search">
-            <p class="mid__icon--search"><i class="fa-thin fa-magnifying-glass"></i></p>
+            <p class="mid__icon--search"><i class="fa-solid fa-magnifying-glass"></i></p>
             <h2 class="mid__text">Search Places</h2>
         </div>
         <div class="mid__select">
-            <p class="mid__icon--select"><i class="fa-light fa-circle-check"></i></p>
+            <p class="mid__icon--select"><i class="fa-regular fa-circle-check"></i></p>
             <h2 class="mid__text">Select Places</h2>
         </div>
         <div class="mid__book">
@@ -69,7 +69,7 @@
             <h6 class="card__title">Grand Spain Madrid</h6>
             <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
                 pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
-            <button class="btn">BOOK NOW</button>
+            <button class="btn btn--book">BOOK NOW</button>
         </div>
     </section>
     <section class="spain-2">
@@ -78,17 +78,21 @@
             <h6 class="card__title">Grand Spain Madrid</h6>
             <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
                 pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
-            <button class="btn">BOOK NOW</button>
+            <button class="btn btn--book">BOOK NOW</button>
         </div>
     </section>
     <section class="review">
+        <h2 class="review__title">What Our Tourist Say</h2>
         <div class="review__card">
-            <h6 class="card__title">SAM SUMON</h6>
-            <p class="card__info main__text"><span class="review__quote"><i class="fa-solid fa-quote-left"></i></span>
-                But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  
-                But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising 
-                pain was account  born and I account will give you a complete account of the system was account  born and 
-                I account will give you a nai the complete account of the system</p>
+            <img class="review__img" src="images/sam-2.png" alt="sam overlooking mountains">
+            <div class="review__text">
+                <h6 class="card__title">SAM SUMON</h6>
+                <p class="card__info main__text"><span class="review__quote"><i class="fa-solid fa-quote-left"></i></span>
+                    But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  
+                    But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising 
+                    pain was account  born and I account will give you a complete account of the system was account  born and 
+                    I account will give you a nai the complete account of the system</p>
+            </div>
         </div>
     </section>
     <footer class="footer">
