--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="https://kit.fontawesome.com/44ff6c67ff.css" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/44ff6c67ff.js" crossorigin="anonymous"></script>
     <title>BHROMAON</title>
 </head>
@@ -20,21 +17,23 @@
         </div>
         <div class="header__search">
             <input type="text" class="header__searchbar" placeholder="Search Your Travel Destination">
-            <button class="btn btn--search">SEARCH <i class="fa-solid fa-magnifying-glass"></i></button>
+            <button class="btn btn--search"> SEARCH  <i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
-        <a href="#why-us">Scroll Down
+        <a href="#why-us" class="header__scroll">Scroll Down
             <br>
-            <i class="fa-light fa-chevron-down"></i>
+            <i class="fa-solid fa-chevron-down"></i>
         </a>
     </section>
     <nav class="nav">
-        <h3 class="nav__logo">BHROMAON</h3>
-        <ul class="nav__list">
-            <li class="nav__link"><a href="#" class="nav__link">WHO WE ARE</a></li>
-            <li class="nav__link"><a href="#" class="nav__link">WHAT WE DO</a></li>
-            <li class="nav__link"><a href="#" class="nav__link">TRAVEL WITH US</a></li>
-            <li class="nav__link"><a href="#" class="nav__link">CONTACT US</a></li>
+        <div class="nav__navbar">
+            <h3 class="nav__logo">BHROMAON</h3>
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#" class="nav__link">WHO WE ARE</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">WHAT WE DO</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">TRAVEL WITH US</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">CONTACT US</a></li>
         </ul>
+        </div>
     </nav>
     <section class="why-us" id="why-us">
         <div class="why-us__main">
