header and nav completed

--- a/index.html
+++ b/index.html
@@ -36,61 +36,71 @@
         </div>
     </nav>
     <section class="why-us" id="why-us">
-        <div class="why-us__main">
-            <h2 class="why-us__title">Why Choose Us</h2>
-            <p class="why-us__info main__info">Tion and dislike men who are so beguiled and demoralized by desire by the charms 
-                of pleasure of the moment, so blinded by desire, that they cannot foresee </p>
-            <p class="why-us__info main__info">Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that</p>
-            <button class="btn btn--explore">EXPLORE PLACES</button>
-        </div>
-        <div class="why-us__img">
-            <img src="images/cottage.png" alt="cottage by the lake">
-            <img src="images/mountain.png" alt="forest covered mountains">
+        <div class="container why-us__container">
+            <div class="why-us__main">
+                <h2 class="why-us__title">Why Choose Us</h2>
+                <p class="why-us__info main__text">Tion and dislike men who are so beguiled and demoralized by desire by the charms 
+                    of pleasure of the moment, so blinded by desire, that they cannot foresee </p>
+                <p class="why-us__info main__text">Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that</p>
+                <button class="btn btn--explore">EXPLORE PLACES</button>
+            </div>
+            <div class="why-us__img">
+                <img class="img--cottage" src="images/cottage.png" alt="cottage by the lake">
+                <img class="img--mountain" src="images/mountain.png" alt="forest covered mountains">
+            </div>
         </div>
     </section>
     <section class="mid">
-        <div class="mid__search">
-            <p class="mid__icon--search"><i class="fa-solid fa-magnifying-glass"></i></p>
-            <h2 class="mid__text">Search Places</h2>
-        </div>
-        <div class="mid__select">
-            <p class="mid__icon--select"><i class="fa-regular fa-circle-check"></i></p>
-            <h2 class="mid__text">Select Places</h2>
-        </div>
-        <div class="mid__book">
-            <p class="mid__icon--book"><i class="fa-regular fa-thumbs-up"></i></p>
-            <h2 class="mid__text">Book&Enjoy</h2>
+        <div class="container">
+            <div class="mid__search">
+                <p class="mid__icon--search"><i class="fa-solid fa-magnifying-glass"></i></p>
+                <h2 class="mid__text">Search Places</h2>
+            </div>
+            <div class="mid__select">
+                <p class="mid__icon--select"><i class="fa-regular fa-circle-check"></i></p>
+                <h2 class="mid__text">Select Places</h2>
+            </div>
+            <div class="mid__book">
+                <p class="mid__icon--book"><i class="fa-regular fa-thumbs-up"></i></p>
+                <h2 class="mid__text">Book&Enjoy</h2>
+            </div>
         </div>
     </section>
     <section class="spain-1">
-        <div class="spain__card spain-1__card">
-            <h6 class="card__title">Spain</h6>
-            <h6 class="card__title">Grand Spain Madrid</h6>
-            <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
-                pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
-            <button class="btn btn--book">BOOK NOW</button>
+        <div class="container">
+            <div class="spain__card spain-1__card">
+                <h6 class="card__title">Spain</h6>
+                <h6 class="card__title">Grand Spain Madrid</h6>
+                <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
+                    pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
+                <button class="btn btn--book">BOOK NOW</button>
+            </div>
         </div>
     </section>
     <section class="spain-2">
-        <div class="spain__card spain-2__card">
-            <h6 class="card__title">Spain</h6>
-            <h6 class="card__title">Grand Spain Madrid</h6>
-            <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
-                pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
-            <button class="btn btn--book">BOOK NOW</button>
+        <div class="container">
+            <div class="spain__card spain-2__card">
+                <h6 class="card__title">Spain</h6>
+                <h6 class="card__title">Grand Spain Madrid</h6>
+                <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
+                    pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
+                <button class="btn btn--book">BOOK NOW</button>
+            </div>
         </div>
     </section>
     <section class="review">
-        <h2 class="review__title">What Our Tourist Say</h2>
-        <div class="review__card">
-            <img class="review__img" src="images/sam-2.png" alt="sam overlooking mountains">
-            <div class="review__text">
-                <h6 class="card__title">SAM SUMON</h6>
-                <p class="card__info main__text"><span class="review__quote"><i class="fa-solid fa-quote-left"></i></span>
-                    But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  
-                    But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising 
-                    pain was account  born and I account will give you a complete account of the system was account  born and 
-                    I account will give you a nai the complete account of the system</p>
+        <div class="container">
+            <h2 class="review__title">What Our Tourist Say</h2>
+            <div class="review__card">
+                <img class="review__img" src="images/sam-2.png" alt="sam overlooking mountains">
+                <div class="review__text">
+                    <h6 class="card__title">SAM SUMON</h6>
+                    <p class="card__info main__text"><span class="review__quote"><i class="fa-solid fa-quote-left"></i></span>
+                        But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  
+                        But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising 
+                        pain was account  born and I account will give you a complete account of the system was account  born and 
+                        I account will give you a nai the complete account of the system</p>
+                </div>
             </div>
         </div>
     </section>
