card styling added

--- a/index.html
+++ b/index.html
@@ -51,26 +51,24 @@
         </div>
     </section>
     <section class="mid">
-        <div class="container">
-            <div class="mid__search">
+            <div class="mid__item">
                 <p class="mid__icon--search"><i class="fa-solid fa-magnifying-glass"></i></p>
                 <h2 class="mid__text">Search Places</h2>
             </div>
-            <div class="mid__select">
+            <div class="mid__item">
                 <p class="mid__icon--select"><i class="fa-regular fa-circle-check"></i></p>
                 <h2 class="mid__text">Select Places</h2>
             </div>
-            <div class="mid__book">
+            <div class="mid__item">
                 <p class="mid__icon--book"><i class="fa-regular fa-thumbs-up"></i></p>
                 <h2 class="mid__text">Book&Enjoy</h2>
             </div>
-        </div>
     </section>
     <section class="spain-1">
         <div class="container">
             <div class="spain__card spain-1__card">
                 <h6 class="card__title">Spain</h6>
-                <h6 class="card__title">Grand Spain Madrid</h6>
+                <h6 class="card__title">GRAND SPAIN MADRID</h6>
                 <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
                     pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
                 <button class="btn btn--book">BOOK NOW</button>
@@ -81,7 +79,7 @@
         <div class="container">
             <div class="spain__card spain-2__card">
                 <h6 class="card__title">Spain</h6>
-                <h6 class="card__title">Grand Spain Madrid</h6>
+                <h6 class="card__title">GRAND SPAIN MADRID</h6>
                 <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
                     pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
                 <button class="btn btn--book">BOOK NOW</button>
