additional styling added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>BHROMAON</title>
 </head>
 <body>
-    <section class="header">
+    <section class="header" id="header">
         <div class="header__titles">
             <h1 class="header__title">BHROMAON</h1>
             <h5 class="header__slogan">Safe Travel Anywhere</h5>
@@ -26,7 +26,7 @@
     </section>
     <nav class="nav">
         <div class="nav__navbar">
-            <h3 class="nav__logo">BHROMAON</h3>
+            <h3 class="nav__logo"><a class="nav__logo" href="#header">BHROMAON</a></h3>
             <ul class="nav__list">
                 <li class="nav__item"><a href="#" class="nav__link">WHO WE ARE</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">WHAT WE DO</a></li>
@@ -67,9 +67,9 @@
     <section class="spain-1">
         <div class="container">
             <div class="spain__card spain-1__card">
-                <h6 class="card__title">Spain</h6>
-                <h6 class="card__title">GRAND SPAIN MADRID</h6>
-                <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
+                <h6 class="card__title spain__card--title">Spain</h6>
+                <h6 class="card__title spain__card--title">GRAND SPAIN MADRID</h6>
+                <p class="spain__card--info card__info">But I must explain to you how all this mistaken idea of account to denouncing 
                     pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
                 <button class="btn btn--book">BOOK NOW</button>
             </div>
@@ -78,22 +78,22 @@
     <section class="spain-2">
         <div class="container">
             <div class="spain__card spain-2__card">
-                <h6 class="card__title">Spain</h6>
-                <h6 class="card__title">GRAND SPAIN MADRID</h6>
-                <p class="card__info main__text">But I must explain to you how all this mistaken idea of account to denouncing 
+                <h6 class="card__title spain__card--title">Spain</h6>
+                <h6 class="card__title spain__card--title">GRAND SPAIN MADRID</h6>
+                <p class="spain__card--info card__info">But I must explain to you how all this mistaken idea of account to denouncing 
                     pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
                 <button class="btn btn--book">BOOK NOW</button>
             </div>
         </div>
     </section>
     <section class="review">
-        <div class="container">
-            <h2 class="review__title">What Our Tourist Say</h2>
+        <h2 class="review__title">What Our Tourist Say</h2>
+        <div class="review__wrapper">
+            <img class="review__img" src="images/sam-2.png" alt="sam overlooking mountains">
             <div class="review__card">
-                <img class="review__img" src="images/sam-2.png" alt="sam overlooking mountains">
                 <div class="review__text">
-                    <h6 class="card__title">SAM SUMON</h6>
-                    <p class="card__info main__text"><span class="review__quote"><i class="fa-solid fa-quote-left"></i></span>
+                    <h6 class="card__title review__card--title">SAM SUMON</h6>
+                    <p class="review__card--info card__info"><span class="review__quote"><i class="fa-solid fa-quote-left"></i></span>
                         But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  
                         But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising 
                         pain was account  born and I account will give you a complete account of the system was account  born and 
