--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
                 <p class="why-us__info main__text">Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that</p>
                 <button class="btn btn--explore">EXPLORE PLACES</button>
             </div>
-            <div class="why-us__img">
-                <img class="img--cottage" src="images/cottage.png" alt="cottage by the lake">
-                <img class="img--mountain" src="images/mountain.png" alt="forest covered mountains">
-            </div>
+            <img class="img--cottage" src="images/cottage.png" alt="cottage by the lake">
+            <img class="img--mountain" src="images/mountain.png" alt="forest covered mountains">
         </div>
     </section>
     <section class="mid">
@@ -76,7 +74,7 @@
         </div>
     </section>
     <section class="spain-2">
-        <div class="container">
+        <div class="container spain-2__container">
             <div class="spain__card spain-2__card">
                 <h6 class="card__title spain__card--title">Spain</h6>
                 <h6 class="card__title spain__card--title">GRAND SPAIN MADRID</h6>
@@ -106,12 +104,11 @@
         <h3 class="footer__logo">BHROMAON</h3>
         <p class="footer__slogan">Safe Travel Anywhere</p>
         <ul class="footer__socials">
-            <li class="footer__icon"><a href="#" class="footer__icon"><i class="fa-brands fa-facebook-f"></i></a></li>
-            <li class="footer__icon"><a href="#" class="footer__icon"><i class="fa-brands fa-twitter"></i></a></li>
-            <li class="footer__icon"><a href="#" class="footer__icon footer__icon--li"><i class="fa-brands fa-linkedin-in"></i></a></li>
-            <li class="footer__icon"><a href="#" class="footer__icon"><i class="fa-brands fa-youtube"></i></a></li>
-            <li class="footer__icon"><a href="#" class="footer__icon"><i class="fa-brands fa-pinterest"></i>
-            </a></li>
+            <li class="footer__item"><a href="#" class="footer__icon"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li class="footer__item"><a href="#" class="footer__icon"><i class="fa-brands fa-twitter"></i></a></li>
+            <li class="footer__item"><a href="#" class="footer__icon footer__icon--li"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li class="footer__item"><a href="#" class="footer__icon"><i class="fa-brands fa-youtube"></i></a></li>
+            <li class="footer__item"><a href="#" class="footer__icon"><i class="fa-brands fa-pinterest"></i></a></li>
         </ul>
     </footer>
 </body>
