--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                 <p class="why-us__info main__text">Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that</p>
                 <button class="btn btn--explore">EXPLORE PLACES</button>
             </div>
-            <img class="img--cottage" src="images/cottage.png" alt="cottage by the lake">
-            <img class="img--mountain" src="images/mountain.png" alt="forest covered mountains">
+            <div class="why-us__img">
+                <img class="img--cottage" src="images/cottage.png" alt="cottage by the lake">
+                <img class="img--mountain" src="images/mountain.png" alt="forest covered mountains">
+            </div>
         </div>
     </section>
     <section class="mid">
@@ -59,7 +61,7 @@
             </div>
             <div class="mid__item">
                 <p class="mid__icon--book"><i class="fa-regular fa-thumbs-up"></i></p>
-                <h2 class="mid__text">Book&Enjoy</h2>
+                <h2 class="mid__text">Book & Enjoy</h2>
             </div>
     </section>
     <section class="spain-1">
