--- a/index.html
+++ b/index.html
@@ -25,16 +25,29 @@
         </a>
     </section>
     <nav class="nav">
-        <div class="nav__navbar">
+        <div class="nav__navbar" id="navbar">
             <h3 class="nav__logo"><a class="nav__logo" href="#header">BHROMAON</a></h3>
             <ul class="nav__list">
                 <li class="nav__item"><a href="#" class="nav__link">WHO WE ARE</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">WHAT WE DO</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">TRAVEL WITH US</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">CONTACT US</a></li>
-        </ul>
+            </ul>
+            <a class="nav__icon" onclick="navMenu()">
+                <i class="fa-solid fa-ellipsis"></i>
+            </a>
         </div>
     </nav>
+    <script>
+        function navMenu() {
+            let burger = document.getElementById("navbar");
+            if (burger.className === "nav__list") {
+            burger.className += " responsive";
+            } else {
+            burger.className = "nav__list";
+            }
+        }
+        </script>
     <section class="why-us" id="why-us">
         <div class="container why-us__container">
             <div class="why-us__main">
@@ -61,7 +74,7 @@
             </div>
             <div class="mid__item">
                 <p class="mid__icon--book"><i class="fa-regular fa-thumbs-up"></i></p>
-                <h2 class="mid__text">Book & Enjoy</h2>
+                <h2 class="mid__text">Book&Enjoy</h2>
             </div>
     </section>
     <section class="spain-1">
